--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="./style.css">
     <title>Techwave</title>
 </head>
-<body>
+<body class="inter-font">
     <header>
         <div class="container">
             <div class="header-parent">
@@ -18,7 +22,7 @@
                         <li><a href="#">Host</a></li>
                     </ul>
                 </div>
-                <button class="btn">
+                <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7]">
                     <p>Subscribe</p>
                 </button>
             </div>
