--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
             </div>
         </div>
     </header>
-    
+    <section class="banner">
+        <div class="container">
+            <div class="mike-circle">
+                <div class="mike">
+                    <img src="./assets/microphone.png" alt="microphone">
+                </div>
+                <div class="circle">
+                    <img src="./assets/hero-circle.png" alt="circle">
+                </div>
+            </div>
+            <div class="banner-content">
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+
+                <div class="banner-btn">
+                    <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7]">
+                    <p>Listen on Spotify</p>
+                    </button>
+                    <button class="btn2">
+                        <p>Subscribe</p>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
