--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#">Host</a></li>
                     </ul>
                 </div>
-                <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7]">
+                <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7] hover:cursor-pointer">
                     <p>Subscribe</p>
                 </button>
             </div>
@@ -53,5 +53,46 @@
             </div>
         </div>
     </section>
+
+    <section class="host">
+        <div class="container">
+            <div class="section-title">
+                <h2>Meet the Host</h2>
+            </div>
+            <div class="host-parent">
+                <div class="host-thumb">
+                    <img src="./assets/host.png" alt="host">
+                </div>
+                <div class="host-content">
+                    <h3>Alex Kumar</h3>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-socials">
+                        <ul class="social-icon">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer-parent">
+                <div class="footer-logo">
+                    <img src="./assets/logo.png" alt="logo">
+                </div>
+                <ul class="footer-icons">
+                    <li><a href="#">Spotify</a></li>
+                    <li><a href="#">Apple Podcasts</a></li>
+                    <li><a href="#">YouTube</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+                <p>&copy; 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
