--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -43,10 +44,10 @@
                 <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
 
                 <div class="banner-btn">
-                    <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7]">
+                    <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7] hover:cursor-pointer">
                     <p>Listen on Spotify</p>
                     </button>
-                    <button class="btn2">
+                    <button class="btn2 hover:cursor-pointer">
                         <p>Subscribe</p>
                     </button>
                 </div>
@@ -68,10 +69,18 @@
                     <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                     <div class="host-socials">
                         <ul class="social-icon">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <div class="s-icon">
+                                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                            </div>
+                            <div class="s-icon">
+                                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                            </div>
+                            <div class="s-icon">
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </div>
+                            <div class="s-icon">
+                                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            </div>
                         </ul>
                     </div>
                 </div>
