--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="section-title">
+                <h2>About the Podcast</h2>
+            </div>
+            <div class="about-parent">
+                <div class="about-content">
+                    <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                    We break down complex topics into digestible insights, explore productivity strategies that actually work,
+                    and share stories of personal growth from industry leaders.</p>
+
+                    <p class="small">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                </div>
+                <div class="about-numbers">
+                    <div class="number">
+                        <h2>150K+</h2>
+                        <p>Monthly Listeners</p>
+                    </div>
+                    <div class="number">
+                        <h2>200+</h2>
+                        <p>Episodes Published</p>
+                    </div>
+                    <div class="number">
+                        <h2>4.9</h2>
+                        <p>Average Rating</p>
+                    </div>
+                    <div class="number">
+                        <h2>50+</h2>
+                        <p>Industry Experts</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <section class="host">
         <div class="container">
