feature section added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,55 @@
     </section>
 
 
+    <section class="feature">
+        <div class="container">
+            <div class="section-title">
+                <h2>Featured Episodes</h2>
+            </div>
+            <div class="feature-parent">
+                <div class="feature-item">
+                    <div class="feature-wrap">
+                        <div class="feature-thumb">
+                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <iframe width="300" height="160" src="https://www.youtube.com/embed/Nua91WBRgLo?si=ygsGUSHu0lllaPOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="feature-content"><h4>The Future of AI in Everyday Life</h4>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.
 
+                        </p>
+                        <p class="f-icon"><i class="fa-solid fa-clock"></i> 42 min</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-wrap">
+                        <div class="feature-thumb">
+                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <iframe width="300" height="160" src="https://www.youtube.com/embed/BjXGV0X6c0k?si=fHtK-kQQKxBST1VZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="feature-content"><h4>Building Better Habits for Remote Work</h4>
+                        <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.
+                        </p>
+                        <p class="f-icon"><i class="fa-solid fa-clock"></i> 35 min</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-wrap">
+                        <div class="feature-thumb">
+                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <iframe width="300" height="160" src="https://www.youtube.com/embed/9wO33Xn16jY?si=C-ycP9GGVw7PDpEi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="feature-content"><h4>Career Growth in Tech: A Roadmap</h4>
+                        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.
+                        </p>
+                        <p class="f-icon"><i class="fa-solid fa-clock"></i> 51 min</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="host">
         <div class="container">
             <div class="section-title">
