feature section updated

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                 <div class="feature-item">
                     <div class="feature-wrap">
                         <div class="feature-thumb">
-                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <div class="thumb-icon ">
+                                <a href="https://youtu.be/Nua91WBRgLo" target="_blank" class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
                             <iframe width="300" height="160" src="https://www.youtube.com/embed/Nua91WBRgLo?si=ygsGUSHu0lllaPOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="feature-content"><h4>The Future of AI in Everyday Life</h4>
@@ -113,7 +115,9 @@
                 <div class="feature-item">
                     <div class="feature-wrap">
                         <div class="feature-thumb">
-                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <div class="thumb-icon">
+                                <a href="https://youtu.be/BjXGV0X6c0k" target="_blank" class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
                             <iframe width="300" height="160" src="https://www.youtube.com/embed/BjXGV0X6c0k?si=fHtK-kQQKxBST1VZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="feature-content"><h4>Building Better Habits for Remote Work</h4>
@@ -126,7 +130,9 @@
                 <div class="feature-item">
                     <div class="feature-wrap">
                         <div class="feature-thumb">
-                            <img src="./assets/youtube-podcast.png" alt="play button">
+                            <div class="thumb-icon">
+                                <a href="https://youtu.be/9wO33Xn16jY" target="_blank" class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
                             <iframe width="300" height="160" src="https://www.youtube.com/embed/9wO33Xn16jY?si=C-ycP9GGVw7PDpEi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="feature-content"><h4>Career Growth in Tech: A Roadmap</h4>
