feature and host section updated

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
             </div>
         </div>
     </section>
-
-
+    <section class="techwave">
+        <div class="container">
+            
+        </div>
+    </section>
     <section class="feature">
         <div class="container">
             <div class="section-title">
@@ -160,16 +163,16 @@
                     <div class="host-socials">
                         <ul class="social-icon">
                             <div class="s-icon">
-                                <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                <li class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                             </div>
                             <div class="s-icon">
-                                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                                <li class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
                             </div>
                             <div class="s-icon">
-                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             </div>
                             <div class="s-icon">
-                                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                                <li class="bg-linear-65 from-purple-500 to-pink-500 bg-clip-text text-transparent"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                             </div>
                         </ul>
                     </div>
