--- a/index.html
+++ b/index.html
@@ -90,7 +90,36 @@
     </section>
     <section class="techwave">
         <div class="container">
-            
+            <div class="section-title">
+                <h2>Why Choose TechWave</h2>
+            </div>
+            <div class="grid-parent">
+                <div class="one">
+                    <img src="./assets/headphone.png" alt="headphone">
+                    <h4>Premium Audio Quality</h4>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="two">
+                    <img src="./assets/device.png" alt="responsive">
+                    <h4>Mobile Friendly</h4>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="three">
+                    <img src="./assets/location.png" alt="Community">
+                    <h4>Global Community</h4>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="four">
+                    <img src="./assets/thunder.png" alt="interview">
+                    <h4>Exclusive Interviews</h4>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="five">
+                    <img src="./assets/resource.png" alt="Resources">
+                    <h4>Rich Resources</h4>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="feature">
