--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <div class="circle">
                     <img src="./assets/hero-circle.png" alt="circle">
                 </div>
+                <div class="new">
+                    <p>NEW</p>
+                </div>
             </div>
             <div class="banner-content">
                 <h1>TechWave</h1>
@@ -216,10 +219,10 @@
                     <img src="./assets/logo.png" alt="logo">
                 </div>
                 <ul class="footer-icons">
-                    <li><a href="#">Spotify</a></li>
-                    <li><a href="#">Apple Podcasts</a></li>
-                    <li><a href="#">YouTube</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#"><i class="fa-brands fa-spotify"></i> Spotify</a></li>
+                    <li><a href="#"><i class="fa-brands fa-apple"></i> Apple Podcasts</a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i> YouTube</a></li>
+                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i> Twitter</a></li>
                 </ul>
                 <p>&copy; 2026 TechWave Podcast. All rights reserved.</p>
             </div>
