--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
             <div class="header-parent">
                 <img src="./assets/logo.png" alt="logo">
                 <div class="nav-parent">
-                    <ul>
+                    <div class="hamburger">
+                        <button class="ham" popovertarget="menu">
+                            <a href="#"><i class="fa-solid fa-bars"></i></a>
+                        </button>
+                        <nav popover role="menu" id="menu">
+                            <button class="ham" popovertarget="menu" popovertargetaction="hide">
+                            <a href="#"><i class="fa-solid fa-xmark"></i></a>
+                            </button>
+                            <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Episodes</a></li>
+                        <li><a href="#">Host</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <ul id="desktop-menu">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Episodes</a></li>
                         <li><a href="#">Host</a></li>
                     </ul>
                 </div>
-                <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7] hover:cursor-pointer">
+                <button class="btn bg-linear-65 from-[#F7CC4D] via-[#EA07BE] to-[#9101F7] hover:cursor-pointer" id="desktop-button">
                     <p>Subscribe</p>
                 </button>
             </div>
